# loato-bench

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  plan.md  pyproject.toml
.claude/commands/: create-pr.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
analysis/: 4b_01_raw_data.json  4b_01_summary.md  transfer_threshold_analysis.json  transfer_threshold_table.md
analysis/tables/: master_results.md  master_results.tex  master_results_full.md  per_fold_breakdown.md  per_fold_breakdown.tex  significance_tests.md  significance_tests.tex
configs/: final_categories.json  llm.yaml
configs/analysis/: eda.yaml
configs/classifiers/: logreg.yaml  mlp.yaml  svm.yaml  xgboost.yaml
configs/data/: sources.yaml  taxonomy.yaml
configs/embeddings/: bge_large.yaml  e5_mistral.yaml  instructor.yaml  minilm.yaml  openai_small.yaml
configs/experiments/: crosslingual.yaml  direct_indirect.yaml  loato.yaml  standard_cv.yaml
data/embeddings/bge_large/: embeddings.npz  meta.json
data/embeddings/e5_mistral/: embeddings.npz  meta.json
data/embeddings/instructor/: embeddings.npz  meta.json
data/embeddings/minilm/: embeddings.npz  meta.json
data/embeddings/openai_small/: embeddings.npz  meta.json
data/labeling/: coverage_report.json  labeling_report.json  llm_labels_raw.jsonl
data/processed/: labeled_v1.parquet  unified_dataset.parquet
data/review/: manual_overrides.csv
data/splits/: contamination_flags.csv  contamination_report.json  crosslingual_split.json  direct_indirect_split.json  loato_splits.json  split_manifest.json  standard_cv_folds.json
docs/: LOATO Bench Technical Draft1.docx  README.md  annotation_notes.md  datasets.md  eda.md  eda_findings.md  experiment_scope.md  findings_direct_indirect.md  findings_llm_baseline.md  findings_master.md  llm_vulnerability_demo.md  methodology_notes.md  motivation_for_docx.md  presentation_notes.md  references.bib  related_work_fomin.md  taxonomy_spec_v1.0.md
docs/stories/: svm_experiments.md
notebooks/: 01_exploratory_data_analysis.ipynb  02_demo_why_classifiers_matter.ipynb  03_manual_review.ipynb  04_dataset_explorer.ipynb
paper/: Makefile  README.md  loato_bench.tex  main.tex  references.bib
results/experiments/: loato_all_results.json  loato_bge_large_logreg.json  loato_bge_large_mlp.json  loato_bge_large_xgboost.json  loato_e5_mistral_logreg.json  loato_e5_mistral_mlp.json  loato_e5_mistral_xgboost.json  loato_instructor_logreg.json  loato_instructor_mlp.json  loato_instructor_xgboost.json  loato_minilm_logreg.json  loato_minilm_mlp.json  loato_minilm_xgboost.json  loato_openai_small_logreg.json  loato_openai_small_mlp.json  loato_openai_small_xgboost.json  standard_cv_all_results.json  standard_cv_bge_large_logreg.json  standard_cv_bge_large_mlp.json  standard_cv_bge_large_xgboost.json  standard_cv_e5_mistral_logreg.json  standard_cv_e5_mistral_mlp.json  standard_cv_e5_mistral_xgboost.json  standard_cv_instructor_logreg.json  standard_cv_instructor_mlp.json  standard_cv_instructor_xgboost.json  standard_cv_minilm_logreg.json  standard_cv_minilm_mlp.json  standard_cv_minilm_xgboost.json  standard_cv_openai_small_logreg.json  standard_cv_openai_small_mlp.json  standard_cv_openai_small_xgboost.json
scripts/: check_contamination.py  download_artifacts.py  feasibility_check.py  generate_generalization_gap_figure.py  generate_loato_confusion_matrices.py  generate_splits.py  relabel_uncertain.py  setup_e5_gguf.sh
src/loato_bench/: cli.py  test_runner.py
src/loato_bench/analysis/: __init__.py  cost_performance.py  eda.py  quality.py  report.py  template_homogeneity.py  transfer_analysis.py  visualization.py
src/loato_bench/classifiers/: __init__.py  logreg.py  mlp.py  svm.py  xgb.py
src/loato_bench/data/: __init__.py  alpaca.py  contamination.py  deepset.py  dolly.py  gentel.py  hackaprompt.py  harmonize.py  llm_labeler.py  oasst.py  open_prompt.py  pint.py  review.py  splits.py  taxonomy.py  taxonomy_spec.py  wildchat.py
src/loato_bench/embeddings/: __init__.py  base.py  cache.py  e5_mistral.py  instructor.py  openai_embed.py  sentence_tf.py
src/loato_bench/evaluation/: __init__.py  llm_baseline.py  loato.py  metrics.py  promptguard_baseline.py  statistical.py  transfer.py
src/loato_bench/llm/: __init__.py  anthropic_llm.py  base.py  openai_llm.py
src/loato_bench/tracking/: __init__.py  wandb_utils.py
src/loato_bench/utils/: __init__.py  config.py  device.py  reproducibility.py
src/promptguard/: __init__.py  cli.py
src/promptguard/analysis/: shap_analysis.py  visualization.py
src/promptguard/classifiers/: base.py  logreg.py  mlp.py
src/promptguard/data/: __init__.py  base.py  deepset.py  gentel.py  hackaprompt.py  harmonize.py  open_prompt.py  pint.py
src/promptguard/embeddings/: __init__.py  cache.py  e5_mistral.py  instructor.py  openai_embed.py  sentence_tf.py
src/promptguard/evaluation/: __init__.py  llm_baseline.py  loato.py  (+2 more)
tests/: test_alpaca_loader.py  test_cache.py  test_classifiers.py  test_cli_data.py  test_cli_embed.py  test_cli_split.py  test_config.py  test_contamination.py  test_data_loading.py  test_deepset_loader.py  test_device.py  test_dolly_loader.py  test_e5_mistral.py  test_eda.py  test_edge_cases.py  test_embeddings.py  test_evaluation.py  test_factory.py  test_gentel_loader.py  test_hackaprompt_loader.py  test_harmonize.py  test_instructor.py  test_llm.py  test_llm_labeler.py  test_oasst_loader.py  test_open_prompt_loader.py  test_openai_embed.py  test_pint_loader.py  test_promptguard_baseline.py  test_quality.py  test_report.py  test_reproducibility.py  test_review.py  test_sentence_tf.py  test_splits.py  test_taxonomy.py  test_taxonomy_spec.py  test_visualization.py  test_wandb_utils.py  test_wildchat_loader.py
(+22 files in other folders)
