[project]
name = "loato-bench"
version = "0.1.0"
description = "Cross-attack generalization of embedding-based prompt injection classifiers — LOATO evaluation protocol"
readme = "README.md"
authors = [
    { name = "Ali Khan", email = "alirazakhan.offi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # Data
    "pandas>=2.2",
    "pyarrow>=17.0",
    "datasets>=3.0",
    "pyyaml>=6.0",
    "datasketch>=1.6",
    "langdetect>=1.0",
    # ML
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "numpy>=1.26",
    # Embeddings
    "sentence-transformers>=3.0",
    "InstructorEmbedding>=1.0",
    "openai>=1.40",
    "anthropic>=0.40",
    # DL backend
    "torch>=2.4",
    # Tracking
    "wandb>=0.17",
    # Viz / Analysis
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "umap-learn>=0.5.7",
    "numba>=0.59",
    "llvmlite>=0.42",
    "shap>=0.45",
    # Stats
    "scipy>=1.14",
    "statsmodels>=0.14",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    "tqdm>=4.66",
    # Config
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    # Robustness
    "tenacity>=8.5",
]

[project.scripts]
loato-bench = "loato_bench.cli:app_entry"
test = "loato_bench.test_runner:run_tests"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.5",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "nbstripout>=0.7",
    "pytest-cov>=7.0.0",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "types-tqdm>=4.66",
    "pandas-stubs>=2.2",
    "pre-commit>=4.0",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-third-party = ["numpy", "pandas", "sklearn", "matplotlib", "seaborn", "wandb", "tqdm", "yaml", "openai", "xgboost", "sentence_transformers", "InstructorEmbedding", "tenacity", "llama_cpp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["loato_bench"]
omit = [
    "src/loato_bench/cli.py",
    "src/loato_bench/classifiers/*",
    "src/loato_bench/evaluation/*",
    "src/loato_bench/analysis/*",
    "src/loato_bench/llm/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
omit = [
    "src/loato_bench/cli.py",
    "src/loato_bench/classifiers/*",
    "src/loato_bench/evaluation/*",
    "src/loato_bench/analysis/*",
    "src/loato_bench/llm/*",
]
fail_under = 90

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["loato_bench"]
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "datasketch.*",
    "langdetect.*",
    "InstructorEmbedding.*",
    "datasets.*",
    "sentence_transformers.*",
    "wandb.*",
    "huggingface_hub.*",
    "llama_cpp.*",
    "umap.*",
    "shap.*",
    "seaborn.*",
    "matplotlib.*",
    "scipy.*",
    "statsmodels.*",
    "numba.*",
    "llvmlite.*",
    "xgboost.*",
    "anthropic.*",
    "sklearn.*",
]
ignore_missing_imports = true
